# sable

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: alpha.yml
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  export.rs  frame_buffer.rs  lib.rs  renderer.rs
src/components/: AudioControls.vue  AudioLoader.vue  DebugPage.vue  EffectStudio.vue  ExportPanel.vue  LyricTimeline.vue  SettingsPage.vue  VisualizerCanvas.vue
src/composables/: useLogger.ts
src/engine/: AudioEngine.ts  BeatDetector.ts  ExportPipeline.ts  FftAnalyzer.ts  LrcParser.ts  OfflineCompositeRenderer.ts  OfflineFluidRenderer.ts  OfflineRenderer.ts  ParticleEngine.ts  SpectrumRenderer.ts  VisualizerEngine.ts  WebGLFluidEngine.ts
