[package]
name = "sable"
version = "0.1.0"
description = "Audio Visualizer"
authors = ["Vincent-the-gamer"]
edition = "2021"

[lib]
name = "sable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1"
# 音频解码
symphonia = { version = "0.5", features = ["all"] }
# 异步
tokio = { version = "1", features = ["full"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 2D 渲染（替代 JS Canvas）
tiny-skia = "0.11"
# FFT 频谱分析
rustfft = "6"
# 随机数（粒子系统）
rand = "0.8"
